--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
   <div id="bienvenida">
     <img 
       class="gif-bg" 
-      src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZ3Y4M2d1eWF6MGJmYzVwY2U5dWQ4eGQxMmpnNGQyMGZscWw5d2h6MiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/3oEjI6SIIHBdRxXI40/giphy.gif"
+      src="https://images.app.goo.gl/w2uaz5439AD64Xrn6"
       alt="Bienvenida GIF"
     >
     <div class="bienvenida-contenido">
