--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
   <div id="bienvenida">
     <img 
       class="gif-bg" 
-      src="https://images.app.goo.gl/w2uaz5439AD64Xrn6"
+      src="https://media1.tenor.com/m/pbJ9b99yp2UAAAAC/lick-anime.gif"
       alt="Bienvenida GIF"
     >
     <div class="bienvenida-contenido">
