--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@
       gap: 10px;
       flex-wrap: wrap;
     }
+    .borrar-todo-btn {
+      background: #ff4c4c;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      padding: 9px 22px;
+      font-size: 1.05em;
+      font-weight: bold;
+      cursor: pointer;
+      margin-left: 12px;
+      box-shadow: 0 2px 12px #0004;
+      transition: background 0.2s;
+    }
+    .borrar-todo-btn:hover {
+      background: #ff0000;
+    }
     .malla {
       display: grid;
       grid-gap: 10px;
@@ -150,14 +166,6 @@
       box-shadow: 0 2px 6px #0001;
       border: 2px solid #888;
       border-bottom: none;
-    }
-    .anio-col {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-      min-width: 150px;
-      max-width: 190px;
     }
     .materia {
       position: relative;
@@ -350,22 +358,6 @@
       .malla { min-width: 0; max-width: 100vw; grid-template-columns: repeat(2, 1fr);}
       .anio-header { font-size: 1em; }
     }
-    .borrar-todo-btn {
-      background: #ff4c4c;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      padding: 9px 22px;
-      font-size: 1.05em;
-      font-weight: bold;
-      cursor: pointer;
-      margin-left: 12px;
-      box-shadow: 0 2px 12px #0004;
-      transition: background 0.2s;
-    }
-    .borrar-todo-btn:hover {
-      background: #ff0000;
-    }
   </style>
 </head>
 <body>
@@ -484,17 +476,28 @@
     function renderMalla() {
       const malla = document.getElementById('malla');
       malla.innerHTML = "";
+
+      let materiasPorAnio = anios.map((_, i) => materias.filter(m => m[0] === (i + 1)));
+      let maxMaterias = Math.max(...materiasPorAnio.map(arr => arr.length), 1);
+
+      // Definir columnas
       malla.style.gridTemplateColumns = `repeat(${anios.length}, 1fr)`;
+      malla.style.gridTemplateRows = `repeat(${maxMaterias + 1}, auto)`; // +1 para encabezados
+
+      // Encabezados
       for (let a = 0; a < anios.length; a++) {
         const div = document.createElement('div');
         div.className = 'anio-header';
         div.textContent = anios[a];
+        div.style.gridRow = "1";
+        div.style.gridColumn = (a + 1);
         malla.appendChild(div);
       }
-      let maxMaterias = 10;
+
+      // Materias y botones "agregar"
       for (let fila = 0; fila < maxMaterias; fila++) {
         for (let a = 0; a < anios.length; a++) {
-          let mats = materias.filter(m => m[0] === (a+1));
+          let mats = materiasPorAnio[a];
           let mat = mats[fila];
           if (mat) {
             const div = document.createElement('div');
@@ -507,7 +510,7 @@
             let habilitada = correlativasHabilitadas(mat);
             if (!habilitada) div.classList.add("inhabilitada");
             let correlTip = "";
-            if (mat[5]&&mat[5].length) {
+            if (mat[5] && mat[5].length) {
               correlTip = "Correlativas:\n" + mat[5].join(", ");
             } else {
               correlTip = "Sin correlativas";
@@ -521,8 +524,8 @@
               <div class="nombre">${mat[2]}</div>
               <span class="creditos">${mat[3]}</span>
               <label class="checkbox-aprobada" title="Aprobar materia">
-                <input type="checkbox" onchange="toggleAprobada('${mat[1]}')" ${aprobadas[mat[1]]?"checked":""}
-                  ${!habilitada?"disabled":""}>
+                <input type="checkbox" onchange="toggleAprobada('${mat[1]}')" ${aprobadas[mat[1]] ? "checked" : ""}
+                  ${!habilitada ? "disabled" : ""}>
                 ✔
               </label>
               <div class="tooltip-correlativas">${correlTip}</div>
@@ -534,12 +537,17 @@
               img.alt = "";
               div.appendChild(img);
             }
+            div.style.gridRow = (fila + 2);
+            div.style.gridColumn = (a + 1);
             malla.appendChild(div);
           } else {
+            // Botón "Agregar materia"
             const div = document.createElement('div');
             div.className = "agregar-mat-btn";
-            div.innerHTML = '<span title="Agregar materia" onclick="abrirMateriaEditor(null,'+(a+1)+')">+</span>';
-            div.onclick = (ev) => { abrirMateriaEditor(null, a+1); };
+            div.innerHTML = `<span title="Agregar materia" onclick="abrirMateriaEditor(null,${a + 1})">+</span>`;
+            div.onclick = (ev) => { abrirMateriaEditor(null, a + 1); };
+            div.style.gridRow = (fila + 2);
+            div.style.gridColumn = (a + 1);
             malla.appendChild(div);
           }
         }
@@ -550,7 +558,7 @@
     function borrarMateriaDirecto(idx) {
       if (confirm("¿Eliminar esta materia?")) {
         let cod = materias[idx][1];
-        materias.splice(idx,1);
+        materias.splice(idx, 1);
         delete aprobadas[cod];
         guardarYActualizar();
       }
@@ -580,23 +588,23 @@
     }
 
     // --- MODAL DE MATERIAS ---
-    function abrirMateriaEditor(idx=null, anioSel=null) {
+    function abrirMateriaEditor(idx = null, anioSel = null) {
       document.getElementById('materia-modal').style.display = "";
       let sa = document.getElementById('mat-anio');
       sa.innerHTML = "";
-      for(let i=0;i<anios.length;i++){
+      for (let i = 0; i < anios.length; i++) {
         let opt = document.createElement('option');
-        opt.value = i+1; opt.textContent = anios[i];
+        opt.value = i + 1; opt.textContent = anios[i];
         sa.appendChild(opt);
       }
       let sc = document.getElementById('mat-categoria');
       sc.innerHTML = "";
-      Object.keys(categorias).forEach(cat=>{
+      Object.keys(categorias).forEach(cat => {
         let opt = document.createElement('option');
-        opt.value=cat; opt.textContent=cat;
+        opt.value = cat; opt.textContent = cat;
         sc.appendChild(opt);
       });
-      if(idx!==null){
+      if (idx !== null) {
         let m = materias[idx];
         document.getElementById('materia-idx').value = idx;
         document.getElementById('mat-codigo').value = m[1];
@@ -604,8 +612,8 @@
         document.getElementById('mat-creditos').value = m[3];
         sa.value = m[0];
         sc.value = m[4];
-        document.getElementById('mat-correlativas').value = m[5]?m[5].join(","):"";
-        document.getElementById('mat-bgimg').value = m[6]||"";
+        document.getElementById('mat-correlativas').value = m[5] ? m[5].join(",") : "";
+        document.getElementById('mat-bgimg').value = m[6] || "";
         document.getElementById('btn-borrar-materia').style.display = "";
       } else {
         document.getElementById('materia-idx').value = "";
@@ -619,14 +627,14 @@
         document.getElementById('btn-borrar-materia').style.display = "none";
       }
     }
-    function cerrarMateriaEditor(){
+    function cerrarMateriaEditor() {
       document.getElementById('materia-modal').style.display = "none";
     }
-    function guardarMateria(e){
+    function guardarMateria(e) {
       e.preventDefault();
       let idx = document.getElementById('materia-idx').value;
       let anio = parseInt(document.getElementById('mat-anio').value);
-      let correlativas = document.getElementById('mat-correlativas').value.split(",").map(s=>s.trim()).filter(Boolean);
+      let correlativas = document.getElementById('mat-correlativas').value.split(",").map(s => s.trim()).filter(Boolean);
       let mat = [
         anio,
         document.getElementById('mat-codigo').value.trim(),
@@ -636,42 +644,37 @@
         correlativas,
         document.getElementById('mat-bgimg').value.trim()
       ];
-      let matsEnAnio = materias.filter(m=>m[0]===anio);
-      if (idx === "" && matsEnAnio.length >= 10) {
-        alert("No puedes agregar más de 10 materias en este año.");
-        return;
-      }
-      if(idx!==""){
-        materias[idx]=mat;
-      }else{
+      if (idx !== "") {
+        materias[idx] = mat;
+      } else {
         materias.push(mat);
       }
       cerrarMateriaEditor();
       guardarYActualizar();
     }
-    function borrarMateria(){
+    function borrarMateria() {
       let idx = document.getElementById('materia-idx').value;
-      if(confirm("¿Eliminar esta materia?")){
+      if (confirm("¿Eliminar esta materia?")) {
         let cod = materias[idx][1];
-        materias.splice(idx,1);
+        materias.splice(idx, 1);
         delete aprobadas[cod];
         guardarYActualizar();
         cerrarMateriaEditor();
       }
     }
     function agregarMateriaGeneral() {
-      let anio = prompt("¿A qué año quieres agregar la materia? (1-"+anios.length+"):");
+      let anio = prompt("¿A qué año quieres agregar la materia? (1-" + anios.length + "):");
       anio = parseInt(anio);
-      if (!anio || anio<1 || anio>anios.length) return;
+      if (!anio || anio < 1 || anio > anios.length) return;
       abrirMateriaEditor(null, anio);
     }
 
     // --- MODAL DE CATEGORIAS ---
-    function abrirCategoriaEditor(){
+    function abrirCategoriaEditor() {
       document.getElementById('categoria-modal').style.display = "";
       renderCategoriasEditor();
     }
-    function cerrarCategoriaEditor(){
+    function cerrarCategoriaEditor() {
       document.getElementById('categoria-modal').style.display = "none";
     }
     function renderCategoriasEditor() {
@@ -753,14 +756,14 @@
       input.style.display = '';
       input.focus();
     }
-    document.getElementById('titulo-input').addEventListener('blur', function() {
+    document.getElementById('titulo-input').addEventListener('blur', function () {
       document.getElementById('titulo-malla').textContent = this.value || "Malla Curricular";
       this.style.display = 'none';
       document.getElementById('titulo-malla').style.display = '';
       guardarYActualizar();
     });
-    document.getElementById('titulo-input').addEventListener('keydown', function(e){
-      if(e.key==="Enter"||e.key==="Escape") this.blur();
+    document.getElementById('titulo-input').addEventListener('keydown', function (e) {
+      if (e.key === "Enter" || e.key === "Escape") this.blur();
     });
 
     // FONDO: URL o archivo
@@ -769,7 +772,7 @@
       let file = document.getElementById('bg-file').files[0];
       if (file) {
         let reader = new FileReader();
-        reader.onload = function(e) {
+        reader.onload = function (e) {
           document.body.style.backgroundImage = `url('${e.target.result}')`;
           localStorage.setItem('malla_bg_url', `url('${e.target.result}')`);
         };
@@ -787,8 +790,8 @@
     }
 
     window.onload = cargarEstado;
-    window.onclick = function(e){
-      if(e.target.classList && e.target.classList.contains("editor-modal")){
+    window.onclick = function (e) {
+      if (e.target.classList && e.target.classList.contains("editor-modal")) {
         cerrarMateriaEditor();
         cerrarCategoriaEditor();
       }
